# tfa-protector-bot

./: .gitignore  Cargo.toml  MPUploadBot.py  README.md  TFAdefenderbot.py  build.sh  mwbot-test.toml  test_TFAdefenderbot.py  tox.ini
src/: main.rs
