[package]
name = "tfa-protector-bot"
version = "0.1.0"
authors = ["Kunal Mehta <legoktm@member.fsf.org>"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
flexi_logger = {version = "0.17.1", default-features = false}
log = "0.4"
mwapi_responses = "0.2.2"
mwbot = "0.3.0"
tokio = {version = "1", features = ["full"]}
